Avoid that the menu button floats in the middle of nowhere and align it with the top bar waffle icon

--- a/frontend/src/global_styles/layout/_base_mobile.sass
+++ b/frontend/src/global_styles/layout/_base_mobile.sass
@@ -52,6 +52,9 @@
     padding-left: 15px
     padding-right: 15px
 
+  #content-body
+    position: static
+
   .hidden-for-mobile
     display: none !important
 
